--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@babel/core": "^7.12.17",
     "@babel/runtime": "^7.12.18",
     "@react-native-community/eslint-config": "1.1.0",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.2",
+    "@types/react-native": "^0.63.50",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "25.5.1",
     "eslint": "6.8.0",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "typescript": "^4.1.5"
   },
   "jest": {
     "preset": "react-native"
