--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-vector-icons": "^8.0.0",
-    "uuidv4": "^6.2.6"
+    "react-native-date-picker": "^3.2.10",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.17",
-    "@babel/runtime": "^7.12.18",
+    "@babel/core": "7.13.10",
+    "@babel/runtime": "7.13.10",
     "@react-native-community/eslint-config": "1.1.0",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.2",
-    "@types/react-native": "^0.63.50",
-    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "25.5.1",
     "eslint": "6.8.0",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1",
-    "typescript": "^4.1.5"
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
