--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "timecard_types": "file:../timeclock_api/timecard_types"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
